--- a/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -22,6 +22,10 @@ CONTENTMAP_MAPTYPE_TERRAIN="Fisica"
 CONTENTMAP_MARKERS_OPTIONS="Opzioni Marcatori"
 CONTENTMAP_MARKERS_ICON_LBL="Icona marcatori"
 CONTENTMAP_MARKERS_ICON_DSC="Puoi caricare nuove icone in formato PNG in /media/contentmap/markers/icons/"
+CONTENTMAP_MARKERS_ACTION_LBL="Azione sul click"
+CONTENTMAP_MARKERS_ACTION_DSC="Seleziona l'azione da compiere quando in marcatore viene cliccato"
+CONTENTMAP_MARKERS_ACTION_BALLOON="Apri un fumetto"
+CONTENTMAP_MARKERS_ACTION_REDIRECT="Redirezione immediata all'articolo"
 
 ; Sottosezione Fumetto sui marcatori
 CONTENTMAP_INFOWINDOW_LBL="Fumetto sui marcatori"
