Option for redirecting to the article without opening the infowindow

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -22,6 +22,10 @@ CONTENTMAP_MAPTYPE_TERRAIN="Terrain"
 CONTENTMAP_MARKERS_OPTIONS="Markers Options"
 CONTENTMAP_MARKERS_ICON_LBL="Markers icon"
 CONTENTMAP_MARKERS_ICON_DSC="Upload your own PNG icons in /media/contentmap/markers/icons/"
+CONTENTMAP_MARKERS_ACTION_LBL="Action on click"
+CONTENTMAP_MARKERS_ACTION_DSC="Select the action to be executed when a marker is clicked"
+CONTENTMAP_MARKERS_ACTION_BALLOON="Open a balloon"
+CONTENTMAP_MARKERS_ACTION_REDIRECT="Immediately redirect to the article"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Balloon on markers"
