--- a/trunk/language/en-GB/en-GB.com_contentmap.sys.ini
+++ b/trunk/language/en-GB/en-GB.com_contentmap.sys.ini
@@ -6,7 +6,8 @@ COM_CONTENTMAP_DESCRIPTION="Shows in a Google Map places associated to articles"
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Remove the signature 'ContentMap by Turismo.eu' below the maps, by purchasing a paid version."
+COM_CONTENTMAP_PURCHASE="This is a non-commercial version of ContentMap. Remove the signature [ContentMap by Turismo.eu] below the maps, by purchasing a paid version. There aren`t other limitations in functionality, but by purchasing a license code you help us continue development and support."
+COM_CONTENTMAP_BUYNOW="Buy now."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instructions"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Plugin usage"
 COM_CONTENTMAP_INSTRUCTIONS_DSC="
