--- a/trunk/language/it-IT/it-IT.com_contentmap.sys.ini
+++ b/trunk/language/it-IT/it-IT.com_contentmap.sys.ini
@@ -6,7 +6,8 @@ COM_CONTENTMAP_DESCRIPTION="Mostra in una Google Map località associate ad arti
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Rimuovi la firma 'ContentMap by Turismo.eu' sottostante le mappe, acquistando la versione a pagamento."
+COM_CONTENTMAP_PURCHASE="Questa è una versione non-commerciale di ContentMap. Rimuovi la firma [ContentMap by Turismo.eu] sottostante le mappe, acquistando la versione a pagamento. Non ci sono altre limitazioni alle funzionalità, ma acquistando una versione a pagamento ci aiuterai nel supporto e sviluppo."
+COM_CONTENTMAP_BUYNOW="Acquista ora."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Istruzioni"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Utilizzo del plugin"
 COM_CONTENTMAP_INSTRUCTIONS_DSC="
