--- a/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -14,6 +14,9 @@ CONTENTMAP_PIXELS="px"
 CONTENTMAP_PERCENT="%"
 CONTENTMAP_ZOOM_LBL="Zoom level"
 CONTENTMAP_ZOOM_DSC="Select the zoom level of the map"
+CONTENTMAP_AUTOMATIC="Automatic"
+CONTENTMAP_CENTER_LBL="Center"
+CONTENTMAP_CENTER_DSC="Center the map on the given coordinates"
 CONTENTMAP_MAPTYPE_LBL="Map type"
 CONTENTMAP_MAPTYPE_ROADMAP="Road map"
 CONTENTMAP_MAPTYPE_SATELLITE="Satellite"
