--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -14,6 +14,9 @@ CONTENTMAP_PIXELS="px"
 CONTENTMAP_PERCENT="%"
 CONTENTMAP_ZOOM_LBL="Livello di zoom"
 CONTENTMAP_ZOOM_DSC="Seleziona il livello di zoom della mappa"
+CONTENTMAP_AUTOMATIC="Automatico"
+CONTENTMAP_CENTER_LBL="Centro"
+CONTENTMAP_CENTER_DSC="Centra la mappe alle coordinate specificate"
 CONTENTMAP_MAPTYPE_LBL="Tipo di mappa"
 CONTENTMAP_MAPTYPE_ROADMAP="Stradale"
 CONTENTMAP_MAPTYPE_SATELLITE="Satellite"
