--- a/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -29,6 +29,8 @@ CONTENTMAP_MARKERS_ACTION_LBL="Action on click"
 CONTENTMAP_MARKERS_ACTION_DSC="Select the action to be executed when a marker is clicked"
 CONTENTMAP_MARKERS_ACTION_BALLOON="Open a balloon"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Immediately redirect to the article"
+CONTENTMAP_MARKERS_CLUSTER_LBL="Cluster"
+CONTENTMAP_MARKERS_CLUSTER_DSC="Group markers in a cluster, increasing the rendering performances. Useful when your map contains several markers."
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Balloon on markers"
