--- a/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -29,6 +29,8 @@ CONTENTMAP_MARKERS_ACTION_LBL="Azione sul click"
 CONTENTMAP_MARKERS_ACTION_DSC="Seleziona l'azione da compiere quando in marcatore viene cliccato"
 CONTENTMAP_MARKERS_ACTION_BALLOON="Apri un fumetto"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Redirezione immediata all'articolo"
+CONTENTMAP_MARKERS_CLUSTER_LBL="Raggruppamento"
+CONTENTMAP_MARKERS_CLUSTER_DSC="Raggruppa i marcatori, incrementando le prestazioni di visualizzazione. Utile quando la mappa contiene molti marcatori."
 
 ; Sottosezione Fumetto sui marcatori
 CONTENTMAP_INFOWINDOW_LBL="Fumetto sui marcatori"
