--- a/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -41,6 +41,10 @@ CONTENTMAP_INFOWINDOW_ACTION_CLICK="On click"
 CONTENTMAP_INFOWINDOW_ACTION_MOUSEOVER="On mouse over"
 CONTENTMAP_INFOWINDOW_TARGET_LBL="URL Target Window"
 CONTENTMAP_INFOWINDOW_TARGET_DSC="Target browser window when the menu item is clicked."
+CONTENTMAP_TARGET_SELF="Same window: _self"
+CONTENTMAP_TARGET_BLANK="New window: _blank"
+CONTENTMAP_TARGET_PARENT="Parent frame: _parent"
+CONTENTMAP_TARGET_TOP="Topmost frame: _top"
 CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Show image"
 CONTENTMAP_INFOWINDOW_SHOWIMAGE_DSC="Show the intro image associated to the articles"
 CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Show author alias"
