--- a/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -39,8 +39,12 @@ CONTENTMAP_INFOWINDOW_ACTION_DSC="Visualizza un fumetto sui marcatori"
 CONTENTMAP_INFOWINDOWWIDTH_DSC="Larghezza massima del fumetto espressa in pixel."
 CONTENTMAP_INFOWINDOW_ACTION_CLICK="Con un click"
 CONTENTMAP_INFOWINDOW_ACTION_MOUSEOVER="Al passaggio del mouse"
-CONTENTMAP_INFOWINDOW_TARGET_LBL="Target finestra Link"
+CONTENTMAP_INFOWINDOW_TARGET_LBL="Target del link"
 CONTENTMAP_INFOWINDOW_TARGET_DSC="Target della finestra del browser quando si clicca sul link."
+CONTENTMAP_TARGET_SELF="Stessa finestra: _self"
+CONTENTMAP_TARGET_BLANK="Nuova finestra: _blank"
+CONTENTMAP_TARGET_PARENT="Frame superiore: _parent"
+CONTENTMAP_TARGET_TOP="Frame più esterno: _top"
 CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Mostra immagine"
 CONTENTMAP_INFOWINDOW_SHOWIMAGE_DSC="Visualizza l'immagine introduttiva associata agli articoli"
 CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Mostra l'alias dell'autore"
