--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -1,5 +1,12 @@
 ;Module backend strings
 CONTENTMAP_DESCRIPTION="Modulo ContentMap"
+CONTENTMAP_COMPONENT="Componente"
+CONTENTMAP_MODULE="Modulo"
+CONTENTMAP_PLUGIN="Plugin"
+CONTENTMAP_LIBRARY="Libreria"
+CONTENTMAP_LANGUAGES="File di lingua"
+CONTENTMAP_INSTALLED="Installato"
+CONTENTMAP_NOT_INSTALLED="Non installato"
 
 ; Sezione Opzioni Mappa
 ;CONTENTMAP_MAP_OPTIONS_LBL="Opzioni Mappa"
