--- a/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -1,5 +1,12 @@
 ;Module backend strings
 CONTENTMAP_DESCRIPTION="ContentMap Module"
+CONTENTMAP_COMPONENT="Component"
+CONTENTMAP_MODULE="Module"
+CONTENTMAP_PLUGIN="Plugin"
+CONTENTMAP_LIBRARY="Library"
+CONTENTMAP_LANGUAGES="Language files"
+CONTENTMAP_INSTALLED="Installed"
+CONTENTMAP_NOT_INSTALLED="Not installed"
 
 ; Map Options section
 ;CONTENTMAP_MAP_OPTIONS_LBL="Map Options"
