--- a/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -81,6 +81,11 @@ CONTENTMAP_ALT_CSS_DSC="Utilizza un differente foglio di stile fornito dal modul
 CONTENTMAP_API_KEY_LBL="Chiave API"
 CONTENTMAP_API_KEY_DSC="Le API di Google Maps v.3 non necessitano di una chiave, ma se detieni una 'Licenza Business di Google Maps API', inseriscila qui."
 
+CONTENTMAP_DATASOURCE_LBL="Sorgente dati"
+CONTENTMAP_JOOMLA_ARTICLES="Articoli di Joomla"
+CONTENTMAP_CONNECTOR="Connettore esterno"
+CONTENTMAP_CONNECTOR_URL_LBL="URL del connettore"
+CONTENTMAP_CONNECTOR_URL_DSC="Inserire l'url della sorgente dati, esempio: http://miosito.com/libraries/contentmap/json/smf.php"
 
 ;Error messages
 CONTENTMAP_DOCUMENTATION="Vedi la documentazione."
