--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -80,6 +80,12 @@ CONTENTMAP_ALT_CSS_DSC="Use a different stylesheet from the supplied module or o
 CONTENTMAP_API_KEY_LBL="API key"
 CONTENTMAP_API_KEY_DSC="Google Maps API v.3 does not require an API key, but if you have a 'Google Maps API for Business license', insert it here."
 
+CONTENTMAP_DATASOURCE_LBL="Data source"
+CONTENTMAP_JOOMLA_ARTICLES="Joomla articles"
+CONTENTMAP_CONNECTOR="External connector"
+CONTENTMAP_CONNECTOR_URL_LBL="Connector's URL"
+CONTENTMAP_CONNECTOR_URL_DSC="Insert the url of the data source, example: http://mysite.com/libraries/contentmap/json/smf.php"
+
 ;Error messages
 CONTENTMAP_DOCUMENTATION="See the documentation."
 CONTENTMAP_NO_DATA="It seems that you have no articles containing coordinates. First of all, you should geolocalize some articles."
