--- a/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -83,6 +83,8 @@ CONTENTMAP_API_KEY_DSC="Le API di Google Maps v.3 non necessitano di una chiave,
 
 CONTENTMAP_DATASOURCE_LBL="Sorgente dati"
 CONTENTMAP_JOOMLA_ARTICLES="Articoli di Joomla"
+CONTENTMAP_JOOMLA_USERS="Utenti di Joomla"
+CONTENTMAP_CONNECTOR_SMF="Simple Machines Forum"
 CONTENTMAP_CONNECTOR="Connettore esterno"
 CONTENTMAP_CONNECTOR_URL_LBL="URL del connettore"
 CONTENTMAP_CONNECTOR_URL_DSC="Inserire l'url della sorgente dati, esempio: http://miosito.com/libraries/contentmap/json/smf.php"
