Data source selector

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -23,7 +23,7 @@ CONTENTMAP_ZOOM_LBL="Zoom level"
 CONTENTMAP_ZOOM_DSC="Select the zoom level of the map"
 CONTENTMAP_AUTOMATIC="Automatic"
 CONTENTMAP_CENTER_LBL="Center"
-CONTENTMAP_CENTER_DSC="Center the map on the given coordinates"
+CONTENTMAP_CENTER_DSC="Center the map on the given coordinates (only if zoom level is not 'automatic')"
 CONTENTMAP_MAPTYPE_LBL="Map type"
 CONTENTMAP_MAPTYPE_ROADMAP="Road map"
 CONTENTMAP_MAPTYPE_SATELLITE="Satellite"
@@ -82,6 +82,8 @@ CONTENTMAP_API_KEY_DSC="Google Maps API v.3 does not require an API key, but if 
 
 CONTENTMAP_DATASOURCE_LBL="Data source"
 CONTENTMAP_JOOMLA_ARTICLES="Joomla articles"
+CONTENTMAP_JOOMLA_USERS="Joomla users"
+CONTENTMAP_CONNECTOR_SMF="Simple Machines Forum"
 CONTENTMAP_CONNECTOR="External connector"
 CONTENTMAP_CONNECTOR_URL_LBL="Connector's URL"
 CONTENTMAP_CONNECTOR_URL_DSC="Insert the url of the data source, example: http://mysite.com/libraries/contentmap/json/smf.php"
