--- a/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -80,6 +80,7 @@ CONTENTMAP_ALT_CSS_DSC="Use a different stylesheet from the supplied module or o
 CONTENTMAP_API_KEY_LBL="API key"
 CONTENTMAP_API_KEY_DSC="Google Maps API v.3 does not require an API key, but if you have a 'Google Maps API for Business license', insert it here."
 
+CONTENTMAP_DATASOURCE_WARNING="Different data source may need additional configuration. See related manual page."
 CONTENTMAP_DATASOURCE_LBL="Data source"
 CONTENTMAP_JOOMLA_ARTICLES="Joomla articles"
 CONTENTMAP_JOOMLA_USERS="Joomla users"
