--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -81,6 +81,7 @@ CONTENTMAP_ALT_CSS_DSC="Utilizza un differente foglio di stile fornito dal modul
 CONTENTMAP_API_KEY_LBL="Chiave API"
 CONTENTMAP_API_KEY_DSC="Le API di Google Maps v.3 non necessitano di una chiave, ma se detieni una 'Licenza Business di Google Maps API', inseriscila qui."
 
+CONTENTMAP_DATASOURCE_WARNING="Sorgenti dati differenti possono avere bisogno di configurazioni addizionali. Vedi la relativa pagina di manuale."
 CONTENTMAP_DATASOURCE_LBL="Sorgente dati"
 CONTENTMAP_JOOMLA_ARTICLES="Articoli di Joomla"
 CONTENTMAP_JOOMLA_USERS="Utenti di Joomla"
