--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -38,6 +38,7 @@ CONTENTMAP_MARKERS_ACTION_BALLOON="Open a balloon"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Immediately redirect to the article"
 CONTENTMAP_MARKERS_CLUSTER_LBL="Cluster"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Group markers in a cluster, increasing the rendering performances. Useful when your map contains several markers."
+CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Show 'Get Directions' link"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Balloon on markers"
@@ -92,3 +93,5 @@ CONTENTMAP_CONNECTOR_URL_DSC="Insert the url of the data source, example: http:/
 ;Error messages
 CONTENTMAP_DOCUMENTATION="See the documentation."
 CONTENTMAP_NO_DATA="It seems that you have no articles containing coordinates. First of all, you should geolocalize some articles."
+
+CONTENTMAP_STREETVIEW="Enabled Street view"
