Corretta la visualizzazione dello Street view - Attivata anteprima immagine dell'icona del marker nei parametri - Corretto problema con articoli con coordinate identiche.

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -39,6 +39,7 @@ CONTENTMAP_MARKERS_ACTION_REDIRECT="Immediately redirect to the article"
 CONTENTMAP_MARKERS_CLUSTER_LBL="Cluster"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Group markers in a cluster, increasing the rendering performances. Useful when your map contains several markers."
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Show 'Get Directions' link"
+CONTENTMAP_MARKERS_PREVIEW="Marker preview"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Balloon on markers"
