--- a/trunk/extras/lib_contentmap/language/de-DE/de-DE.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/de-DE/de-DE.contentmap.admin.ini
@@ -38,6 +38,8 @@ CONTENTMAP_MARKERS_ACTION_BALLOON="&Ouml;ffnet ein Pop-up Fenster"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Weiterleitung zum Artikel."
 CONTENTMAP_MARKERS_CLUSTER_LBL="Gruppieren"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Das Gruppieren von Marker, Erh&ouml;ht die Rendering-Performances. N&uuml;tzlich, wenn Ihre Karte mehrere Marker enth&auml;lt."
+CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Zeige den Link 'Berechnen Sie den Abstand'"
+CONTENTMAP_MARKERS_PREVIEW="Vorschau icon marker"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Fenster auf Marker"
@@ -92,3 +94,5 @@ CONTENTMAP_CONNECTOR_URL_DSC="Legen Sie die URL der Datenquelle fest, z.B. : htt
 ;Error messages
 CONTENTMAP_DOCUMENTATION="Siehe Dokumentation."
 CONTENTMAP_NO_DATA="Es scheint, dass Sie keine Koordinaten eingegeben haben. Bitte geben Sie in Ihrem Artikel die Koordinaten eingeben."
+
+CONTENTMAP_STREETVIEW="Aktivieren Street view"
