--- a/trunk/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
@@ -38,6 +38,8 @@ CONTENTMAP_MARKERS_ACTION_BALLOON="Ouvrir la bulle d'info"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Rediriger directement vers l'article"
 CONTENTMAP_MARKERS_CLUSTER_LBL="Grouper"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Grouper les repères lorsqu'ils sont proches optimise la rapidité d'affichage. Utile lorqu'une carte contient beaucoup de repères."
+CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Afficher le lien 'Calculez la distance'"
+CONTENTMAP_MARKERS_PREVIEW="Aperçu icône marker"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Options des bulles d'info des repères"
@@ -92,3 +94,5 @@ CONTENTMAP_CONNECTOR_URL_DSC="Entrez l'URL de la source de données, exemple: ht
 ;Error messages
 CONTENTMAP_DOCUMENTATION="Voir la documentation."
 CONTENTMAP_NO_DATA="Apparemment aucun de vos articles ne contiennent de coordonnées. Avant tout vous devez géolocaliser vos articles (Voir options des métadonnées dans vos articles)."
+
+CONTENTMAP_STREETVIEW="Activer Street view"
