--- a/trunk/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
@@ -38,6 +38,8 @@ CONTENTMAP_MARKERS_ACTION_BALLOON = "Open een ballon"
 CONTENTMAP_MARKERS_ACTION_REDIRECT = "Onmiddellijk omleiden naar het artikel"
 CONTENTMAP_MARKERS_CLUSTER_LBL = "Cluster"
 CONTENTMAP_MARKERS_CLUSTER_DSC = "Groepeer markers in een cluster, het verhogen van de rendering prestaties. Handig wanneer je kaart meerdere markers bevat."
+CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Laat de koppeling 'Bereken de afstand'"
+CONTENTMAP_MARKERS_PREVIEW="Voorbeeldpictogram marker"
 
 ;Ballon op de markers onderafdeling
 CONTENTMAP_INFOWINDOW_LBL = "Balloon op markers"
@@ -92,3 +94,5 @@ CONTENTMAP_CONNECTOR_URL_DSC = "Voeg de url van de gegevensbron, bijvoorbeeld: h
 ;Foutmeldingen
 CONTENTMAP_DOCUMENTATION = "Zie de documentatie."
 CONTENTMAP_NO_DATA = "Het lijkt erop dat je geen voorwerpen met coördinaten hebben. Allereerst moet je geolocalize een aantal artikelen."
+
+CONTENTMAP_STREETVIEW="Activeer Street view"
