--- a/trunk/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.admin.ini
@@ -38,6 +38,8 @@ CONTENTMAP_MARKERS_ACTION_BALLOON="Abrir um balão"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Redirecionar imediatamente para o artigo"
 CONTENTMAP_MARKERS_CLUSTER_LBL="Aglomerado"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Aglomerar um grupo de marcadores, incrementa os desempenhos de renderização. Útil quando o seu mapa contém vários marcadores."
+CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Mostrar o link 'Calcular a distância'"
+CONTENTMAP_MARKERS_PREVIEW="ícone de visualização marker"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Balão nos marcadores"
@@ -92,3 +94,5 @@ CONTENTMAP_CONNECTOR_URL_DSC="Insira o url da fonte de dados, por exemplo: http:
 ;Error messages
 CONTENTMAP_DOCUMENTATION="Veja a documentação."
 CONTENTMAP_NO_DATA="Parece que não dispõe de artigos com essas coordenadas. Antes de tudo, deve geolocalizar alguns artigos."
+
+CONTENTMAP_STREETVIEW="Ativar Street view"
