--- a/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
@@ -38,6 +38,8 @@ CONTENTMAP_MARKERS_ACTION_BALLOON="Abrir un globo"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Direcionar al artículo"
 CONTENTMAP_MARKERS_CLUSTER_LBL="Conjunto"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Los grupos marcados en un conjunto, incrementan el rendimiento del renderizado. Recomendable cuando el mapa contiene muchas marcas."
+CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Mostrar el enlace 'Calcular la distancia'"
+CONTENTMAP_MARKERS_PREVIEW="Ver icon marker"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Globos en marcadores"
@@ -92,3 +94,5 @@ CONTENTMAP_CONNECTOR_URL_DSC="Inserta la url de la fuente, ejemplo: http://mysit
 ;Error messages
 CONTENTMAP_DOCUMENTATION="Mirar la documentación."
 CONTENTMAP_NO_DATA="No hay artículos conteniendo coordenadas. Lo primero de todo, deberías geolocalizar algunos artículos."
+
+CONTENTMAP_STREETVIEW="Activar Street view"
