--- a/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
@@ -38,6 +38,8 @@ CONTENTMAP_MARKERS_ACTION_BALLOON="Open a balloon" ;*** Recently added. Still un
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Immediately redirect to the article" ;*** Recently added. Still untranslated. ***
 CONTENTMAP_MARKERS_CLUSTER_LBL="Cluster" ;*** Recently added. Still untranslated. ***
 CONTENTMAP_MARKERS_CLUSTER_DSC="Group markers in a cluster, increasing the rendering performances. Useful when your map contains several markers." ;*** Recently added. Still untranslated. ***
+CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Visa länken 'Beräkna avståndet'"
+CONTENTMAP_MARKERS_PREVIEW="Förhandsgranska marker"
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Popup för markörer"
@@ -92,3 +94,5 @@ CONTENTMAP_CONNECTOR_URL_DSC="Insert the url of the data source, example: http:/
 ;Error messages
 CONTENTMAP_DOCUMENTATION="Se dokumentation."
 CONTENTMAP_NO_DATA="Det verkar som dina artiklar saknar koordinater. Du borde börja med att geolokalisera några."
+
+CONTENTMAP_STREETVIEW="Aktivera Street view"
