--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -40,6 +40,8 @@ CONTENTMAP_MARKERS_CLUSTER_LBL="Raggruppamento"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Raggruppa i marcatori, incrementando le prestazioni di visualizzazione. Utile quando la mappa contiene molti marcatori."
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Mostra il link 'Calcola il percorso'"
 CONTENTMAP_MARKERS_PREVIEW="Anteprima icona marker"
+CONTENTMAP_KML_URL_LBL="URL Tracciato KML"
+CONTENTMAP_KML_URL_DSC="Se si inserisce l'url di un tracciato kml, questo verrà visualizzato sulla mappa."
 
 ; Sottosezione Fumetto sui marcatori
 CONTENTMAP_INFOWINDOW_LBL="Fumetto sui marcatori"
@@ -63,6 +65,7 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Imposta un limite al numero di caratteri de
 
 ; Sezione Opzioni del filtro
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opzioni del filtro"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Mostra il filtro dinamico sulle categorie"
 CONTENTMAP_FEATURED_ARTICLES_LBL="Articoli in evidenza"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Fitro basato sull'alltributo 'In evidenza'."
 CONTENTMAP_ONLYFEATURED="Solo articoli in evidenza"
