Aggiornati i file di lingua

--- a/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
@@ -40,6 +40,8 @@ CONTENTMAP_MARKERS_CLUSTER_LBL="Grouper"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Grouper les repères lorsqu'ils sont proches optimise la rapidité d'affichage. Utile lorqu'une carte contient beaucoup de repères."
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Afficher le lien 'Calculez la distance'"
 CONTENTMAP_MARKERS_PREVIEW="Aperçu icône marker"
+CONTENTMAP_KML_URL_LBL="URL Track KML file"
+CONTENTMAP_KML_URL_DSC="You can insert the URL to your Track KML file inside your server, to display the track layer in the map."
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Options des bulles d'info des repères"
@@ -63,6 +65,7 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Réglez le nombre de caractères du texte d
 
 ; Filtering Options section
 CONTENTMAP_FILTERING_OPTIONS_LBL="Options de filtrage"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Show Filter based on categories under the map."
 CONTENTMAP_FEATURED_ARTICLES_LBL="Articles en 'vedette'"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Filtrage basé sur les articles en 'vedette'."
 CONTENTMAP_ONLYFEATURED="Articles en 'vedette' seulement"
