--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -65,7 +65,7 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Imposta un limite al numero di caratteri de
 
 ; Sezione Opzioni del filtro
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opzioni del filtro"
-CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Mostra il filtro dinamico sulle categorie"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Mostra il filtro dinamico sulle categorie sotto la mappa"
 CONTENTMAP_FEATURED_ARTICLES_LBL="Articoli in evidenza"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Fitro basato sull'alltributo 'In evidenza'."
 CONTENTMAP_ONLYFEATURED="Solo articoli in evidenza"
