--- a/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
@@ -40,6 +40,8 @@ CONTENTMAP_MARKERS_CLUSTER_LBL = "Cluster"
 CONTENTMAP_MARKERS_CLUSTER_DSC = "Groepeer markers in een cluster, het verhogen van de rendering prestaties. Handig wanneer je kaart meerdere markers bevat."
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Laat de koppeling 'Bereken de afstand'"
 CONTENTMAP_MARKERS_PREVIEW="Voorbeeldpictogram marker"
+CONTENTMAP_KML_URL_LBL="URL Track KML file"
+CONTENTMAP_KML_URL_DSC="You can insert the URL to your Track KML file inside your server, to display the track layer in the map."
 
 ;Ballon op de markers onderafdeling
 CONTENTMAP_INFOWINDOW_LBL = "Balloon op markers"
@@ -63,6 +65,7 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC = "Stel een limiet van aantal tekens in arti
 
 ;Filteropties sectie
 CONTENTMAP_FILTERING_OPTIONS_LBL = "Filteropties"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Show Filter based on categories under the map."
 CONTENTMAP_FEATURED_ARTICLES_LBL = "Aanbevolen artikelen"
 CONTENTMAP_FEATURED_ARTICLES_DSC = "Filter gebaseerd op 'Speciaal' eigenschap."
 CONTENTMAP_ONLYFEATURED = "Alleen aanbevolen"
