--- a/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
@@ -40,6 +40,8 @@ CONTENTMAP_MARKERS_CLUSTER_LBL="Cluster" ;*** Recently added. Still untranslated
 CONTENTMAP_MARKERS_CLUSTER_DSC="Group markers in a cluster, increasing the rendering performances. Useful when your map contains several markers." ;*** Recently added. Still untranslated. ***
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Visa länken 'Beräkna avståndet'"
 CONTENTMAP_MARKERS_PREVIEW="Förhandsgranska marker"
+CONTENTMAP_KML_URL_LBL="URL Track KML file"
+CONTENTMAP_KML_URL_DSC="You can insert the URL to your Track KML file inside your server, to display the track layer in the map."
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Popup för markörer"
@@ -63,6 +65,7 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Ange antal tecken som ska visas i artikeln.
 
 ; Filtering Options section
 CONTENTMAP_FILTERING_OPTIONS_LBL="Alternativ filtrering"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Show Filter based on categories under the map."
 CONTENTMAP_FEATURED_ARTICLES_LBL="Utvalda artiklar"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Filter baserat på 'Utvald' egenskap."
 CONTENTMAP_ONLYFEATURED="Endast utvalda"
