--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -40,6 +40,8 @@ CONTENTMAP_MARKERS_CLUSTER_LBL="Cluster"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Group markers in a cluster, increasing the rendering performances. Useful when your map contains several markers."
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Show 'Get Directions' link"
 CONTENTMAP_MARKERS_PREVIEW="Marker preview"
+CONTENTMAP_KML_URL_LBL="URL Track KML file"
+CONTENTMAP_KML_URL_DSC="You can insert the URL to your Track KML file inside your server, to display the track layer in the map."
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Balloon on markers"
@@ -63,6 +65,7 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Set a limit of number of characters in arti
 
 ; Filtering Options section
 CONTENTMAP_FILTERING_OPTIONS_LBL="Filtering Options"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Show Filter based on categories under the map."
 CONTENTMAP_FEATURED_ARTICLES_LBL="Featured Articles"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Filter based on 'Featured' property."
 CONTENTMAP_ONLYFEATURED="Only featured"
