--- a/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
@@ -40,6 +40,8 @@ CONTENTMAP_MARKERS_CLUSTER_LBL="Conjunto"
 CONTENTMAP_MARKERS_CLUSTER_DSC="Los grupos marcados en un conjunto, incrementan el rendimiento del renderizado. Recomendable cuando el mapa contiene muchas marcas."
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Mostrar el enlace 'Calcular la distancia'"
 CONTENTMAP_MARKERS_PREVIEW="Ver icon marker"
+CONTENTMAP_KML_URL_LBL="URL Track KML file"
+CONTENTMAP_KML_URL_DSC="You can insert the URL to your Track KML file inside your server, to display the track layer in the map."
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Globos en marcadores"
@@ -63,6 +65,7 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Expecifica el límite de caracteres a mostr
 
 ; Filtering Options section
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opciones de Filtrado"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Show Filter based on categories under the map."
 CONTENTMAP_FEATURED_ARTICLES_LBL="Artículos Destacados"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Filtro basado en 'Destadados'."
 CONTENTMAP_ONLYFEATURED="Solo destacados"
