--- a/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.ini
+++ b/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="There are no articles containing coordinates viewable by thi
 CONTENTMAP_GET_DIRECTIONS="Get directions"
 CONTENTMAP_PLEASE_SAVE="Please save in order to see the updated icon preview"
 CONTENTMAP_MARKERS_PREVIEW="Marker preview"
+CONTENTMAP_FROM_ADDRESS="From address"
