Corretto il funzionamento in https. Corretto margine del modulo. Inserito il calcolo del percorso e lo streetview direttamente nel fumetto.

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="There are no articles containing coordinates viewable by thi
 CONTENTMAP_GET_DIRECTIONS="Get directions"
 CONTENTMAP_PLEASE_SAVE="Please save in order to see the updated icon preview"
 CONTENTMAP_MARKERS_PREVIEW="Marker preview"
+CONTENTMAP_FROM_ADDRESS="From address"
