--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="Non ci sono articoli con coordinate associate visualizzabili
 CONTENTMAP_GET_DIRECTIONS="Calcola il percorso"
 CONTENTMAP_PLEASE_SAVE="Salva per visualizzare l'icona aggiornata"
 CONTENTMAP_MARKERS_PREVIEW="Anteprima icona marker"
+CONTENTMAP_FROM_ADDRESS="Dall'indirizzo"
