aggiornati file lingua russi

--- a/language/ru-RU/ru-RU.com_contentmap.sys.ini
+++ b/language/ru-RU/ru-RU.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Показывает на карте Google указ
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Это не коммерческая версия ContentMap. Уберите подпись [Powered by ContentMap] под картами преобретя платную версию. Нет никаких ограничений в функционале, однако покупая лицензию, вы помогаете продолжению разработки и поддержки."
+COM_CONTENTMAP_PURCHASE="Это не коммерческая версия ContentMap. Уберите подпись [Powered by ContentMap] под картами преобритя платную версию. Нет никаких ограничений в функционале, однако покупая лицензию, вы помогаете продолжению разработки и поддержки."
 COM_CONTENTMAP_BUYNOW="Купить сейчас."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Инструкции"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Использование плагина"
@@ -28,7 +28,7 @@ COM_CONTENTMAP_INSTRUCTIONS_DSC="
 <p>
 <img src='http://www.turismo.eu/download/en-GB/select-image.jpg'>
 <h3>Шаг 3: Изображение по желанию</h3>
-По желанию вы можете указать маленькое изображение, которое относится к статье. Оно будет показано внутри всплывающей подсказки, относящейся к маркеру на карте. Сопутствующие параметры, такие как 'Положение картинки', 'Альтернивный текст' или 'Заголовок', также будут использованы, однако имейте ввиду, что только поле 'Изображение для вступительного текста материала' будет использовано в всплывающей подсказке. Поле 'Изображение полного текста материала' будет игнорироваться.
+По желанию вы можете указать маленькое изображение, которое относится к статье. Оно будет показано внутри всплывающей подсказки, относящейся к маркеру на карте. Сопутствующие параметры, такие как 'Положение картинки', 'Альтернативный текст' или 'Заголовок', также будут использованы, однако имейте ввиду, что только поле 'Изображение для вступительного текста материала' будет использовано в всплывающей подсказке. Поле 'Изображение полного текста материала' будет игнорироваться.
 </p>
 <br class='clr'>
 
@@ -41,8 +41,8 @@ COM_CONTENTMAP_INSTRUCTIONS_DSC="
 
 <p>
 <img src='http://www.turismo.eu/download/en-GB/plugin-manager.jpg'>
-<h3>Шаг 5: Рещение проблем</h3>
-Если вы не видите карту или она не отвечает заданым требованиям, откройте ваш менеджер плагинов.
+<h3>Шаг 5: Решение проблем</h3>
+Если вы не видите карту или она не отвечает заданным требованиям, откройте ваш менеджер плагинов.
 </p>
 <br class='clr'>
 
@@ -66,7 +66,7 @@ MOD_CONTENTMAP_INSTRUCTIONS_DSC="
 <p>
 <img src='http://www.turismo.eu/download/en-GB/contentmap-module-filtering.jpg'>
 <h3>Шаг 2: Установка желаемых фильтров</h3>
-Место для групп модулей указываемое в статьях, так что, в отличии от плагина, здесь доступны настройки фильтров для статей, расположенные ниже.
+Модуль группирует места, указанные в статьях, поэтому, в отличии от плагина, ниже расположены настройки фильтров для статей.
 </p>
 <br class='clr'>
 
