- Risolto il problema di marker con stesse coordinate aggiungendo la libreria javascript OverlappingMarkerSpiderfier. - Aggiunta gestione del parametro "Modules Class Suffix" che non veniva utilizzato. - Aggiunto link all'immagine presente nel fumetto utilizzando quello del titolo del fumetto. - Aggiunti due nuovi parametri nel modulo e nel plugin che consentono di nascondere i controlli StreetView e i controlli di Zoom.

--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -99,3 +99,9 @@ CONTENTMAP_DOCUMENTATION="Vedi la documentazione."
 CONTENTMAP_NO_DATA="Sembra che tu non abbia articoli con coordinate associate. Come prima cosa, dovresti geolocalizzare alcuni articoli."
 
 CONTENTMAP_STREETVIEW="Abilita Street view"
+
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Nascondi controlli Street View"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Nascondi controlli Zoom"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Nascondi i controlli di Street View"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Nascondi i controlli di Zoom"
